Support Eclipse 4.6 Neon